objects/Module_Skill_Attribute__c.object
<CustomObject><fields>
        <fullName>How_Developed__c</fullName>
        <inlineHelpText>How or where this is developed</inlineHelpText>
        <label>How Developed</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Method_of_Teaching__c</fullName>
        <label>Method of Teaching</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Module_Version__c</fullName>
        <label>Module Version</label>
        <referenceTo>Module_Version__c</referenceTo>
        <relationshipLabel>Module Skill &amp; Attributes</relationshipLabel>
        <relationshipName>Module_Skill_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Record_No__c</fullName>
        <description>Set by Workflow</description>
        <inlineHelpText>Leave blank on record creation if automatic numbering is required (set by Workflow)</inlineHelpText>
        <label>No.</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Skill_or_Attribute__c</fullName>
        <label>Skill or Attribute</label>
        <type>TextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Module Skill &amp; Attribute</label><nameField>
        <displayFormat>MSA-{000000}</displayFormat>
        <label>Module Skill &amp; Attribute Ref</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Module Skill &amp; Attributes</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>